Removed more spacing variables that was not working correctly

--- a/style/elvis/css/elvis-all.css
+++ b/style/elvis/css/elvis-all.css
@@ -450,20 +450,20 @@
       line-height: 21px; } }
   .e-link i {
     position: relative;
-    margin-left: spacing("1");
+    margin-left: 8px;
     background-size: cover;
     height: 24px;
     width: 24px; }
   .e-link.e-back i {
     position: relative;
-    margin-left: -spacing("1");
+    margin-left: -8px;
     background-size: cover;
     height: 24px;
     width: 24px; }
   .e-link.e-icon-first i {
     position: relative;
     margin-left: 0;
-    margin-right: spacing("1");
+    margin-right: 8px;
     background-size: cover;
     height: 24px;
     width: 24px; }
@@ -494,7 +494,7 @@
         line-height: 24px; } }
     .e-link.e-custom i {
       position: relative;
-      margin-left: spacing("1");
+      margin-left: 8px;
       background-size: 24px;
       background-position-x: 60%;
       background-position-y: 50%;
@@ -513,7 +513,7 @@
     position: relative; }
     .e-link.e-external i {
       position: relative;
-      margin-left: spacing("1");
+      margin-left: 8px;
       margin-right: 0px;
       background-size: 24px; }
 
